syntax = "proto3";
package proskenion;

import "objects.proto";


// Error は GRPC Error Code で返す
message ConsensusResponse {}

// PropagateBlock において伝搬する側が送信するデータである。
message PropagateBlockRequest {
    oneof req {
        // 伝搬する Block。最初に Block を送信する。
        Block block = 1;
        // 伝搬する Block が持っている Transaction。Block を送信した後に順番に送信する。
        Transaction transaction = 2;
    }
}

// PropagateBlock において伝搬される側が送信するデータである。
message PropagateBlockResponse {
    // Block を正しく受け取ったことを伝搬する側に伝えるために署名を送信する。
    Signature signature = 1;
}

/**
 * ConsensusGate は合意形成に使用する rpc を定義する。
 * これを使用するのは合意形成に参加するPeerのみである。
 **/
service Consensus {
    /**
     * PropagateTx は Client から受け取った Transaction を自分以外の Peer に伝搬させる。
     * Context には送信者の署名をつける。
     *
     * InvalidArgument (code = 3) : One of following conditions:
     *  1 ) StatelessValidator で落ちる場合
     * PermissionDenied (code = 7) : One of following conditions:
     *  1 ) Context の 署名の主がPeerでない場合
     **/
    rpc PropagateTx (Transaction) returns (ConsensusResponse);


    /**
     * PropagateBlock は Commit する block と txList を自分以外の Peer に伝搬させる。
     * Context には送信者の署名をつける
     *
     * InvalidArgument (code = 3) : One of following conditions:
     *  1 ) Block is nil.
     *  2 ) Block Verify failed.
     *  3 ) Transaction is nil.
     *  4 ) Transaction Verify failed.
     *  AlreadyExist (code = 6) : One of following conditions:
     *  1 ) Block is already exist in block queue.
     *  PermissionDenied (code = 7) : One of following conditions:
     *  1 ) Context の 署名の主がPeerでない場合
     **/
    rpc PropagateBlock(stream PropagateBlockRequest) returns (stream PropagateBlockResponse);
}
